# magic-card-finder

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/services/: __init__.py  analysis_service.py  card_detection.py  card_name_extractor.py  card_name_resolver.py  card_recognition.py  cardmarket_client.py  cardtrader_client.py  detector_service_client.py  image_ingest.py  ocr_service_client.py  open_tcg_client.py  price_sources.py  pricing_aggregator.py  progress.py  scryfall_client.py  step_definitions.py
backend/tests/: test_analysis_service.py  test_analysis_service_card_names.py  test_api.py  test_card_name_resolver.py  test_detector_service_client.py  test_extraction_service_client.py  test_ocr_service_client.py  test_price_sources.py  test_step_definitions_and_progress.py
detector_service/: Dockerfile  pyproject.toml  train.py
detector_service/app/: main.py
detector_service/app/api/: routes.py  schemas.py
detector_service/app/detection/: __init__.py  debug.py  protocols.py  yolo_detector.py
detector_service/models/mtg_detector/: args.yaml
detector_service/models/mtg_detector2/: args.yaml
detector_service/models/mtg_detector3/: args.yaml
detector_service/tests/unit/api/: test_routes.py  test_schemas.py
detector_service/tests/unit/detection/: test_debug.py  test_yolo_detector.py
extraction_service/: Dockerfile  openapi.yaml  pyproject.toml
extraction_service/app/: __init__.py  main.py
extraction_service/app/api/: __init__.py  routes.py  schemas.py
extraction_service/app/detection/: __init__.py  card_normalizer.py  classifier.py  multi_card_extractor.py  opencv_detector.py  protocols.py  single_card_extractor.py
extraction_service/app/extract/: __init__.py  orchestrator.py
extraction_service/app/ocr/: __init__.py  protocols.py  tesseract_recognizer.py  title_region.py
extraction_service/tests/: __init__.py
extraction_service/tests/integration/: test_api.py
extraction_service/tests/unit/detection/: __init__.py  test_card_normalizer.py  test_classifier.py  test_opencv_detector.py  test_real_images.py  test_single_card_extractor.py
frontend/: Dockerfile  index.html  (+4 more)
(+24 files in other folders)
