[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-card-finder-backend"
version = "0.1.0"
description = "FastAPI backend for Magic Card Finder"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.5.0",
  "httpx>=0.27.0",
  "opencv-python-headless>=4.10.0.0",
  "numpy>=1.26.0",
  "python-multipart>=0.0.9",
  "psycopg2-binary>=2.9.0",
  "SQLAlchemy>=2.0.0",
  "alembic>=1.13.0",
  "requests-oauthlib>=1.3.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

